package com.restaurant;

// Клас для обробки оплати
public class PaymentService {
    public void processPayment() {
        System.out.println("Обробка безконтактної оплати");
    }
}